--- a/src/main/resources/templates/adminUserInfo.html
+++ b/src/main/resources/templates/adminUserInfo.html
@@ -8,7 +8,7 @@
 <body>
 
 <h1>User Info</h1>
-<form action="#" th:action="@{/saveUser}" th:object="${user}" method="post">
+<form action="#" th:action="@{/admin/saveUser}" th:object="${user}" method="post">
   <input type="hidden" th:field="*{id}"/>
   <label for="username">Username:</label>
   <input type="text" id="username" th:field="*{username}"/>
