--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 <h1>User, welcome spring boot security page!</h1>
-
+<br><br>
+<form th:action="@{/logout}" method="post">
+    <button type="submit">Logout</button>
+</form>
 
 </body>
 </html>
