--- a/src/main/resources/templates/adminMenu.html
+++ b/src/main/resources/templates/adminMenu.html
@@ -6,6 +6,10 @@
     <title>Users</title>
 </head>
 <body>
+<form th:action="@{/logout}" method="post">
+    <button type="submit">Logout</button>
+</form>
+<br><br>
 
 <h1>Users</h1>
 <table>
