--- a/src/main/resources/templates/adminUserInfo.html
+++ b/src/main/resources/templates/adminUserInfo.html
@@ -6,12 +6,19 @@
   <title>User Info</title>
 </head>
 <body>
+<form th:action="@{/logout}" method="post">
+  <button type="submit">Logout</button>
+</form>
+<br><br>
 
-<h1>User Info</h1>
 <form action="#" th:action="@{/admin/saveUser}" th:object="${user}" method="post">
   <input type="hidden" th:field="*{id}"/>
   <label for="username">Username:</label>
-  <input type="text" id="username" th:field="*{username}"/>
+  <input type="text" id="username" th:field="*{username}"/>\
+  <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+  <label for="password">Password:</label>
+  <input type="text" id="password" th:field="*{password}"/>
+  <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
   <label for="userInfo">User info:</label>
   <input type="text" id="userInfo" th:field="*{userInfo}"/>
   <button type="submit">Submit</button>
