--- a/src/main/resources/templates/adminUserInfo.html
+++ b/src/main/resources/templates/adminUserInfo.html
@@ -13,14 +13,34 @@
 
 <form action="#" th:action="@{/admin/saveUser}" th:object="${user}" method="post">
   <input type="hidden" th:field="*{id}"/>
+
   <label for="username">Username:</label>
-  <input type="text" id="username" th:field="*{username}"/>\
-  <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+  <input type="text" id="username" th:field="*{username}"/>
+  <span class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+
   <label for="password">Password:</label>
-  <input type="text" id="password" th:field="*{password}"/>
-  <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
-  <label for="userInfo">User info:</label>
-  <input type="text" id="userInfo" th:field="*{userInfo}"/>
+  <input type="password" id="password" th:field="*{password}"/>
+  <span class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+
+  <label for="firstName">First Name:</label>
+  <input type="text" id="firstName" th:field="*{firstName}"/>
+  <span class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>
+
+  <label for="lastName">Last Name:</label>
+  <input type="text" id="lastName" th:field="*{lastName}"/>
+  <span class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>
+
+  <label for="email">Email:</label>
+  <input type="text" id="email" th:field="*{email}"/>
+  <span class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+
+  <label for="age">Age:</label>
+  <input type="number" id="age" th:field="*{age}" min="18" max="100"/>
+  <span class="error" th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></span>
+
+  <label for="userInfo">Additional Info:</label>
+  <textarea id="userInfo" th:field="*{userInfo}"></textarea>
+
   <button type="submit">Submit</button>
 </form>
 
