--- a/src/main/resources/templates/adminUserInfo.html
+++ b/src/main/resources/templates/adminUserInfo.html
@@ -14,32 +14,56 @@
 <form action="#" th:action="@{/admin/saveUser}" th:object="${user}" method="post">
   <input type="hidden" th:field="*{id}"/>
 
+  <br>
+
   <label for="username">Username:</label>
   <input type="text" id="username" th:field="*{username}"/>
   <span class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+
+  <br>
 
   <label for="password">Password:</label>
   <input type="password" id="password" th:field="*{password}"/>
   <span class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
 
+  <br>
+
   <label for="firstName">First Name:</label>
   <input type="text" id="firstName" th:field="*{firstName}"/>
   <span class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>
+
+  <br>
 
   <label for="lastName">Last Name:</label>
   <input type="text" id="lastName" th:field="*{lastName}"/>
   <span class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>
 
+  <br>
+
   <label for="email">Email:</label>
   <input type="text" id="email" th:field="*{email}"/>
   <span class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+
+  <br>
 
   <label for="age">Age:</label>
   <input type="number" id="age" th:field="*{age}" min="18" max="100"/>
   <span class="error" th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></span>
 
+  <br>
+
   <label for="userInfo">Additional Info:</label>
   <textarea id="userInfo" th:field="*{userInfo}"></textarea>
+
+  <br>
+
+  <label for="userRoles">User roles:</label>
+  <div id="userRoles" th:each="role : ${allRoles}">
+    <input type="checkbox" th:value="${role.id}" th:field="*{roles}" />
+    <label th:text="${role.role}"></label>
+  </div>
+
+  <br>
 
   <button type="submit">Submit</button>
 </form>
